# prose-hygiene

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  DEV_NOTES.md  INSTALLATION.md  KNOWN_LIMITATIONS.md  LICENSE  Makefile  README.md  SECURITY.md  WEB_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
codex/: README.md  SKILL.md
docs/: ai-documentation-hygiene.md  codex-feature-request.md  comparison-with-linters.md  example-cleanup-walkthrough.md  git-hooks-architecture.md  tech-deep-dive.md  two-layer-model.md
hooks/: pre-commit
hooks/pre-commit.d/: 10-prose-hygiene  20-ai-word-scrub
src/prose_hygiene/: __init__.py  cli.py  engine.py  style.py  web.py
tests/: test_cli.py  test_engine.py  test_style.py  test_web.py
